# fastx

./: .cookiecutter.json  .pre-commit-config.yaml  20.bed  CONTRIBUTING.rst  PD47269d.m64089_201022_131119.ccs.head.base_proportion.txt  PD47269d.m64089_201022_131119.ccs.head.bq_proportion.txt  PD47269d.m64089_201022_131119.ccs.head.fasta  PD47269d.m64089_201022_131119.ccs.head.fastq  PD47269d.m64089_201022_131119.ccs.head.length  PD47269d.m64089_201022_131119.ccs.head.stat  PD47269d.m64125_201110_063134.ccs.head.base_proportion.txt  PD47269d.m64125_201110_063134.ccs.head.bq_proportion.txt  PD47269d.m64125_201110_063134.ccs.head.fasta  PD47269d.m64125_201110_063134.ccs.head.fastq  PD47269d.m64125_201110_063134.ccs.head.fq  PD47269d.m64125_201110_063134.ccs.head.length  PD47269d.m64125_201110_063134.ccs.head.length2  README.md  README.rst  bar.fq  files.txt  five.fa  five.fq  foo.fa  foo.fq  input.fofn  noxfile.py  pyproject.toml  requirements.txt  setup.py  ten.fa  ten.fq
docs/: conf.py  index.rst  reference.rst
split/: foo.fa  m64089_201022_131119_20_ccs.fq  m64089_201022_131119_3_ccs.fq  m64089_201022_131119_68_ccs.fq  m64089_201022_131119_74_ccs.fq  m64089_201022_131119_75_ccs.fq  m64125_201110_063134_30_ccs.fa  m64125_201110_063134_43_ccs.fa  m64125_201110_063134_47_ccs.fa  m64125_201110_063134_48_ccs.fa  m64125_201110_063134_60_ccs.fa
src/fastx/: __init__.py  __main__.py  blacklist.py  chunkstring.py  fastqc.py  gap.py  head.py  index.py  length.py  names.py  nested_dict.py  parse_args.py  parse_arguments.py  sort.py  split.py  (+6 more)
tests/: __init__.py  test_main.py
