[tool.poetry]
name = "fastx"
version = "0.0.1"
description = "fastx"
authors = ["Sangjin Lee <sl17@sanger.ac.uk>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Sangjin/fastx"
repository = "https://github.com/Sangjin/fastx"
documentation = "https://fastx.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Changelog = "https://github.com/Sangjin/fastx/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"
argparse = "^1.4.0"
bio = "^0.4.1"
pysam = "^0.16.0"
natsort = "^7.1.1"
pyfastx = "^0.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
safety = "^1.9.0"
mypy = "^0.780"
typeguard = "^2.9.1"
xdoctest = "^0.12.0"
sphinx = "^3.1.0"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.5.1"

[tool.poetry.scripts]
fastx = "fastx.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["fastx"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
